[package]
name = 'nm-sys'
version = '0.4.0'
authors = ['majorz']
links = '"nm"'
edition = '2018'
build = 'build.rs'

[package.metadata.docs.rs]
features = ['dox']

[package.metadata.system-deps]
libnm = '1'

[lib]
name = 'nm_sys'

[dependencies]
libc = '0.2'

[dependencies.glib]
package = 'glib-sys'
version = "0.17.4"

[dependencies.gio]
package = 'gio-sys'
version = "0.17.4"

[dependencies.gobject]
package = 'gobject-sys'
version = "0.17.4"

[build-dependencies]
system-deps = '6.1.0'

[dev-dependencies]
shell-words = '1.1.0'
tempfile = '3'

[features]
v1_2 = []
v1_4 = ['v1_2']
v1_6 = ['v1_4']
v1_8 = ['v1_6']
v1_10 = ['v1_8']
v1_12 = ['v1_10']
v1_14 = ['v1_12']
v1_16 = ['v1_14']
v1_18 = ['v1_16']
v1_20 = ['v1_18']
v1_22 = ['v1_20']
v1_24 = ['v1_22']
v1_26 = ['v1_24']
v1_28 = ['v1_26']
v1_30 = ['v1_28']
v1_32 = ['v1_30']
v1_34 = ['v1_32']
v1_36 = ['v1_34']
v1_38 = ['v1_36']
v1_40 = ['v1_38']
dox = []
